Fix alignment of topic and user modal.
closes #535

--- a/frontend/src/components/shared/popUps/topicModal/topicModal.scss
+++ b/frontend/src/components/shared/popUps/topicModal/topicModal.scss
@@ -181,10 +181,7 @@
     }
   }
   .MuiDialogActions-root {
-    justify-content: center;
     margin-bottom: 12px;
-    margin-right: 22px;
-    margin-left: 13px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
@@ -261,10 +258,6 @@
           }
         }
       }
-    }
-    .MuiDialogActions-root {
-      margin-left: 15px;
-      margin-right: 15px
     }
   }
 }
